Use unitless `line-height`; fix footnotes (v0.1.3)
Specifying `line-height: 1.3em` instead of simply `line-height: 1.3`
causes odd inheritance properties. In the case of the former, the
`line-height` is calculated from the `font-size` of the parent only. In
the case of the later, the `line-height` is calculated from the
`font-size` of the current child element.

This was causing odd spacing issues with footnotes, as the computed
`line-height` was far too large, since footnotes use a really small
`font-size`.

A new test is included for footnotes and additional tests are included
in the inline code-block test in order to test multiple font sizes.

--- a/styling.sass
+++ b/styling.sass
@@ -1,4 +1,4 @@
-// version 0.1.2
+// version 0.1.3
 
 @import "normalize"
 @import "//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,700,700italic"
@@ -52,7 +52,7 @@ body
     margin-top: 30px
     margin-bottom: 25px
     max-width: 1000px
-  line-height: 1.3em
+  line-height: 1.3
   text-align: justify
 
 p
@@ -176,10 +176,10 @@ a, a:link, a:visited, a:hover
 
 code
   font-family: "Source Code Pro", "Consolas", "Monaco", monospace
-  font-size: 90%
+  font-size: 85%
   background: $block-background
   border: 1px solid $block-border-color
-  padding: 0px 2px 0px 2px
+  padding: 0px 0.15em 0px 0.15em
   -webkit-border-radius: 3px
   -moz-border-radius: 3px
   border-radius: 3px
